[WFLY-19536] Add -Djdk.tracePinnedThreads=full to the args passed to testsuite server launches