@@ -133,7 +133,7 @@
         <jboss.domain.server.args></jboss.domain.server.args>
 
         <!-- Additional JVM args, like those for EC2. -->
-        <jvm.args.other>-server</jvm.args.other>
+        <jvm.args.other>-server -Djdk.tracePinnedThreads=full</jvm.args.other>
 
         <!-- Logging config -->
         <testLogToFile>true</testLogToFile>
